[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kmclab"
version = "0.1.1"
description = "Hex and square lattice KMC classes."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Shirin Asadi"}]
license = {text = "MIT"}
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
